fix: inject GTM noscript

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     
   </head>
   <body>
+    <%- injectHtml %>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
